# OnlineJudge

./: nginx.conf
api/: build.sh  judge_result.proto  submission.proto
backend/: go.mod  go.sum  init_mongo.js  main.go
backend/dao/: dao.go  mongo.go  redis.go
backend/demo/: object_id.go
backend/service/problem/: controller.go  init.go  model.go
backend/service/submission/: controller.go  init.go  model.go
backend/service/user/: controller.go  init.go  middleware.go  model.go
backend/test/: test_problem.http  test_user.http
backend/util/: errors.go  reply.go  request.go
frontend/: package-lock.json  package.json
frontend/src/: App.vue  index.html  main.js
frontend/src/components/: AddProblem.vue  EditProblem.vue  Header.vue  Login.vue  ProblemDetail.vue  ProblemList.vue  ProblemSearch.vue  Register.vue  SubmissionList.vue
frontend/src/pages/: AddProblemPage.vue  EditProblemPage.vue  IndexPage.vue  ProblemDetailPage.vue  ProblemListPage.vue  ProblemSearchPage.vue  SubmissionListPage.vue
frontend/src/router/: index.js
judger/api/: build.sh  judge.proto
judger/client/: CMakeLists.txt
judger/client/pb/: judge.pb.cc  judge.pb.h
judger/client/src/: child.c  child.h  main.cpp  runner.c  runner.h  runner_pb.hpp  seccomp_rules.c  seccomp_rules.h
judger/server/: go.mod  go.sum  main.go
judger/server/judger/: judger.go
judger/server/judger/demo/: demo.go
judger/server/service/: config.go  judge.go  judge_service.go
write_back/: go.mod  go.sum  main.go
write_back/pb/judge_result/: judge_result.pb.go
write_back/service/: write_back.go
(+6 files in other folders)
